--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -197,8 +197,9 @@ body, html {
 .cart-total {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-bottom: 1rem;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
 }
 
 .checkout-btn {
@@ -487,7 +488,6 @@ body, html {
 
 /* PayPal Button Container */
 #paypal-button-container {
-    margin-top: 1rem;
     width: 100%;
     min-height: 45px;
 }
